--- a/My Portfolio Website/index.html
+++ b/My Portfolio Website/index.html
@@ -15,9 +15,9 @@
     />
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
-    <title>Responsive portfolio website Rian - Bedimcode</title>
+    <title>My Portfolio Website - Eniola</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
@@ -513,13 +513,13 @@
   </a> -->
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src="assets/css/scroll.min.js"></script>
+    <script src="scroll.min.js"></script>
 
-    <!--=============== EMAIL JS ===============-->
+<!--     <!--=============== EMAIL JS ===============-->
     <script  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
+ -->
     <!--=============== MAIN JS ===============-->
-    <script src="assets/css/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
  
