--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
 
           <div class="home__perfil">
             <div class="home__image">
-              <img src="assets/img/head.png" alt="image" class="home__img" />
+              <img src="head.png" alt="image" class="home__img" />
               <div class="home__shadow"></div>
             </div>
             <div class="home__social">
               <a
-                href="https://www.instagram.com/"
+                href="https://www.instagram.com/o_eniola"
                 target="_blank"
                 class="home__social-link"
                 ><i class="ri-instagram-line"></i>
               </a>
 
               <a
-                href="https://www.linkedin.com/"
+                href="https://www.linkedin.com/in/eniola-otunubi"
                 target="_blank"
                 class="home__social-link"
               >
@@ -98,7 +98,7 @@
               </a>
 
               <a
-                href="https://github.com/"
+                href="https://github.com/o-eniola"
                 target="_blank"
                 class="home__social-link"
               >
@@ -106,7 +106,7 @@
               </a>
 
               <a
-                href="https://facebook.com/"
+                href="https://www.facebook.com/otunubi.eniola"
                 target="_blank"
                 class="home__social-link"
               >
@@ -114,7 +114,7 @@
               </a>
 
               <a
-                href="https://twitter.com/"
+                href="https://twitter.com/o_enni"
                 target="_blank"
                 class="home__social-link"
               >
@@ -149,7 +149,7 @@
 
           <div class="about__perfil">
             <div class="about__image">
-              <img src="assets/img/head2.jpg" alt="image" class="about__img" />
+              <img src="head2.jpg" alt="image" class="about__img" />
 
               <div class="about__shadow"></div>
 
@@ -265,7 +265,7 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="assets/img/travel.png"
+                src="travel.png"
                 alt="image"
                 class="projects__img"
               />
@@ -300,7 +300,7 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="assets/img/project-2.jpg"
+                src="project-2.jpg"
                 alt="image"
                 class="projects__img"
               />
@@ -336,7 +336,7 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="assets/img/project-3.jpg"
+                src="project-3.jpg"
                 alt="image"
                 class="projects__img"
               />
@@ -371,7 +371,7 @@
           <article class="projects__card">
             <div class="projects__image">
               <img
-                src="assets/img/project-1.jpg"
+                src="project-1.jpg"
                 alt="image"
                 class="projects__img"
               />
@@ -463,14 +463,14 @@
     </ul> 
     <div class="footer__social">
       <a
-        href="https://www.instagram.com/"
+        href="https://www.instagram.com/o_eniola"
         target="_blank"
         class="footer__social-link"
         ><i class="ri-instagram-line"></i>
       </a>
 
       <a
-        href="https://www.linkedin.com/"
+        href="https://www.linkedin.com/in/eniola-otunubi"
         target="_blank"
         class="footer__social-link"
       >
@@ -478,7 +478,7 @@
       </a>
 
       <a
-        href="https://github.com/"
+        href="https://github.com/o-eniola"
         target="_blank"
         class="footer__social-link"
       >
@@ -486,7 +486,7 @@
       </a>
 
       <a
-        href="https://facebook.com/"
+        href="https://www.facebook.com/otunubi.eniola"
         target="_blank"
         class="footer__social-link"
       >
@@ -494,7 +494,7 @@
       </a>
 
       <a
-        href="https://twitter.com/"
+        href="https://twitter.com/o_enni"
         target="_blank"
         class="footer__social-link"
       >
