--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 class="projects__img"
               />
 
-              <a href="#" class="projects__button button">
+              <a href="https://o-eniola.github.io/travel-site/" class="projects__button button">
                 <i class="ri-arrow-right-up-line"></i>
               </a>
             </div>
